# C6GE

./: . gitignore  .gitignore  .gitmodules  C6GE.sln  CMakeLists.txt  LICENSE  README.md  build-linux.sh  build-macos.sh  build-windows.bat  build.bat  build.sh  imgui.ini
.github/workflows/: LinuxUnitTest.yml  MacOSUnitTest.yml  WindowsUnitTest.yml  ci.yml  flawfinder.yml
C6Editor/: App.axaml  App.axaml.cs  CMakeLists.txt  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  app.manifest
C6GE/: C6GE.vcxproj  C6GE.vcxproj.filters  CMakeLists.txt  glad.c
C6GE/Libraries/Include/glad/: glad.h
C6GE/include/: main.h
C6GE/include/Render/: RenderPicker.h  RenderPipeline.h
C6GE/include/Render/RenderVulkan/: RenderVulkanPipeline.h
C6GE/src/: Main.cpp  main.cpp
C6GE/src/Assets/: Fog.frag  Fog.vert  Readme.md  outline.vert  shader.frag  shader.vert
C6GE/src/Assets/shaders/: Fog.frag  Fog.vert  cube_vs.sc  equirect.frag  equirect.vert  hdr_tonemap_fs.sc  hdr_tonemap_vs.sc  lines.vert  mesh_fs.sc  mesh_vs.sc  metaball_fs.sc  metaball_vs.sc  raymarch_fs.sc  raymarch_vs.sc  shader.frag  shader.vert  test.sc  test_fs.sc  varying.def.sc
C6GE/src/Assets/textures/: Readme.md
C6GE/src/Components/: CameraComponent.cpp  CameraComponent.h  CubeComponent.h  CubemapComponent.h  InstanceComponent.h  LightComponent.h  MeshComponent.cpp  MeshComponent.h  MetaballComponent.h  ModelComponent.cpp  ModelComponent.h  ScaleComponent.h  ShaderComponent.h  SpecularTextureComponent.h  TextureComponent.cpp  TextureComponent.h  TransformComponent.cpp  TransformComponent.h
C6GE/src/ECS/Object/: Object.cpp  Object.h
C6GE/src/Engine/: Engine.cpp  Engine.h
C6GE/src/Input/: Input.cpp  Input.h
C6GE/src/Logging/: Log.cpp  Log.h
C6GE/src/Render/: Render.cpp  Render.h  RenderPipeline.cpp  Render_macOS.mm  VertexLayouts.cpp  VertexLayouts.h  stb.cpp
C6GE/src/Render/Assets/: Fog.frag  Fog.vert  outline.frag  shader.frag
C6GE/src/Render/Assets/textures/: Readme.md
C6GE/src/Render/RenderVulkan/: RenderVulkanPipeline.cpp
C6GE/src/Render/Shader/: Shader.cpp  Shader.h
C6GE/src/Render/ShaderFiles/: shader.frag  shader.vert
C6GE/src/Render/Texture/: Texture.cpp  Texture.h
C6GE/src/Render/TextureFiles/WoodFloor043_2K-JPG/: Readme.md
C6GE/src/Time/: DeltaTime.h
C6GE/src/Window/: Window.cpp  Window.h  Window_macOS.mm
C6ProjectManager/: App.axaml  App.axaml.cs  CMakeLists.txt  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  app.manifest
C6Runtime/: CMakeLists.txt
C6Runtime/include/: Window.h
C6Runtime/src/: Window.cpp  main.cpp
DirectEditor/: App.axaml  App.axaml.cs  CMakeLists.txt  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  app.manifest
DirectEditor/src/: main.cpp
DirectEngine/: CMakeLists.txt
DirectEngine/include/: main.h
DirectEngine/include/Projects/: Projects.h
DirectEngine/include/Render/: RenderPicker.h  RenderPipeline.h
DirectEngine/include/Render/RenderVulkan/: RenderVulkanPipeline.h
DirectEngine/include/Window/: Window.h
DirectEngine/src/Projects/: Projects.cpp
DirectEngine/src/Render/: RenderPicker.cpp  RenderPipeline.cpp
DirectEngine/src/Render/RenderVulkan/: RenderVulkanPipeline.cpp
DirectEngine/src/Window/: Window.cpp
DirectProjectManager/: App.axaml  App.axaml.cs  CMakeLists.txt  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  app.manifest
DirectRuntime/: CMakeLists.txt
DirectRuntime/src/: Window.cpp  main.cpp
assets/: cube.gsh  cube.psh  cube.vsh  cube_shadow.vsh  gltf_shadow.vsh  gltf_shadow_skinned.vsh  plane.psh  plane.vsh  plane_no_shadow.psh  post_gamma.psh  rt_composite.psh  rt_composite.vsh  rt_fill.csh  rt_reflect_composite.psh  rt_shadow.csh
scripts/: README.md  build-linux.sh  build-windows.ps1  remove_bom.ps1
src/: CMakeLists.txt  MacHelper.h  MacHelper.mm  d_engine.cpp  d_engine.h  entry_stubs.cpp  fs_cube.sc  fs_cubes.sc  fs_mesh.sc  main.cpp  main.h  varying_cube.def.sc  vk_images.cpp  vk_initializers.cpp  vk_initializers.h  vs_cube.sc  vs_cubes.sc  vs_mesh.sc
src/Assets/: app_icon.aps  app_icon.rc  cube.psh  cube.vsh  cube_inst.psh  cube_inst.vsh  plane.psh  plane.vsh  plane_no_shadow.psh
src/EditorTheme/: EditorTheme.cpp  EditorTheme.h
src/Engine/: Engine.cpp  Engine.h
src/MeshLoader/: MeshLoader.cpp  MeshLoader.h
src/Object/: Object.cpp  Object.h  ObjectExample.h
src/Platform/: FileDialog.cpp  FileDialog.h
src/Project/: Project.cpp  Project.h
src/Render/: HDR.cpp  HDR.h  Render.Core.cpp  Render.Framebuffer.cpp  Render.Pipeline.cpp  Render.RayTracing.cpp  Render.UI.cpp  Render.cpp  Render.h  RenderCommon.hpp  RenderECS.cpp  RenderECS.h  RenderInternals.h
src/Render/Features/Shadows/: Shadows.cpp  Shadows.h
src/Render/Systems/: RenderSystem.cpp  RenderSystem.h
src/Runtime/: Runtime.cpp
src/Runtime/ECS/: Components.h  World.h
src/TextureLoader/: TextureLoader.cpp  TextureLoader.h
src/Window/: Window.cpp  Window.h
src/assets/shaders/: fs_cube.sc  fs_mesh.sc  varying_mesh.def.sc  vs_mesh.sc
src/assets/shaders/hdr/: fs_hdr_blur.sc  fs_hdr_bright.sc  fs_hdr_lum.sc  fs_hdr_lumavg.sc  fs_hdr_tonemap.sc  fs_hdr_tonemap_simple.sc  varying.def.sc  vs_hdr_lum.sc  vs_hdr_tonemap.sc
src/imgui/: fs_ocornut_imgui.bin.h  imgui_impl_bgfx.h  vs_ocornut_imgui.bin.h
src/mtl/: fs_cubes.sc.bin.h  fs_meatballs.sc.bin.h  fs_raymarching.sc.bin.h  vs_cubes.sc.bin.h  vs_meatballs.sc.bin.h  vs_metaballs.sc.bin.h  vs_raymarching.sc.bin.h
